--- a/src/countermanager/http/ceremony/ceremony.html
+++ b/src/countermanager/http/ceremony/ceremony.html
@@ -13,6 +13,8 @@
         <!-- BEGIN CSS -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
         <link rel="stylesheet" type="text/css" href="./css/main.css" />
+        <!-- ChT own css -->
+        <link rel="stylesheet" type="text/css" href="./css/ceremony.css" />
         <!-- END CSS -->
 
         <!-- BEGIN JS -->
