Modularize and test current_matches
git-svn-id: https://localhost/svn/CounterManager/trunk@7049 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/display/current_match_on_table.html
+++ b/src/countermanager/http/display/current_match_on_table.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="../scripts/common.js"></script>
         <script type="text/javascript" src="../scripts/jquery.js"></script>
         <script type="text/javascript" src="../scripts/xmlrpcclient.js"></script>
-        <script type="text/javascript" src="current_match_on_table.js"></script>
+        <script type="module" src="current_match_on_table.js"></script>
 
         <!-- Common CSS settings -->
         <link rel="stylesheet" type="text/css" href="current_match_on_table.css">
