Adopt more current_matches to module
git-svn-id: https://localhost/svn/CounterManager/trunk@7053 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/display/current_matches_multiline.html
+++ b/src/countermanager/http/display/current_matches_multiline.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="../scripts/jquery.js"></script>
         <script type="text/javascript" src="../scripts/xmlrpcclient.js"></script>
         <script type="text/javascript" src="../scripts/common.js"></script>
-        <script type="text/javascript" src="current_matches_multiline.js"></script>
+        <script type="module" src="current_matches_multiline.js"></script>
         
         <!-- Common CSS settings -->
         <link rel="stylesheet" type="text/css" href="current_matches_multiline.css">
