--- a/src/countermanager/http/display/current_matches.html
+++ b/src/countermanager/http/display/current_matches.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="../scripts/jquery.js"></script>
         <script type="text/javascript" src="../scripts/xmlrpcclient.js"></script>
         <script type="text/javascript" src="../scripts/common.js"></script>
-        <script type="text/javascript" src="current_matches.js"></script>
+        <script type="module" src="current_matches.js"></script>
         
         <!-- Common CSS settings -->
         <link rel="stylesheet" type="text/css" href="current_matches.css">        
