Extend counter tests
git-svn-id: https://localhost/svn/CounterManager/trunk@7074 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/counter/counter.html
+++ b/src/countermanager/http/counter/counter.html
@@ -61,8 +61,8 @@
                     
                     <tr class="flags" id="flags">
                         <td class="flags left" colspan="2">
-                            <button type="button" class="toggle service left" id="serviceleft" data-counter='setServiceLeft'>Service</button>
-                            <button type="button" class="toggle timeout left" id="timeoutleft" data-counter='setTimeoutLeft'>Timeout</button>
+                            <button type="button" class="toggle service left" id="serviceleft" data-counter='toggleServiceLeft'>Service</button>
+                            <button type="button" class="toggle timeout left" id="timeoutleft" data-counter='toggleTimeoutLeft'>Timeout</button>
                             <button type="button" class="toggle wo left" id="woleft" data-counter='setWOLeft'>Lost w/o</button>
                             <!-- <button type="button" class="toggle injured left" id="injuredleft" data-counter='setInjuredLeft'>Injured</button> -->
                         </td>
@@ -200,7 +200,7 @@ Problem:
                 <div id="left">
                     <button type="button" class="toggle start" id="startGame" data-counter='toggleStartGame'>Start Game</button>
                     <button type="button" class="toggle expedite" id="setExpedite" data-counter='toggleExpedite'>Expedite</button>
-                    <button type="button" class="swapPlayers" id="swapPlayers" data-couter='swapPlayers'>Swap Names</button>
+                    <button type="button" class="swapPlayers" id="swapPlayers" data-counter='swapPlayers'>Swap Names</button>
                     <button type="button" class="toggle endMatch" id="endMatch" data-counter='endMatch'>End Match</button>
                 </div>
                 <div id="right">
