Test toggle yellow / yellow red cards
git-svn-id: https://localhost/svn/CounterManager/trunk@7089 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/counter/counter.html
+++ b/src/countermanager/http/counter/counter.html
@@ -82,16 +82,16 @@ Problem:
 -->
                     <tr class="cards" id="cards">
                         <td class="cards left" colspan="2">
-                            <button type="button" class="toggle yellow left" id="yellowleft" data-counter="setYLeft">Yellow</button>
-                            <button type="button" class="toggle yr1p left" id="yr1pleft" data-counter="setYR1Left">YR 1P</button>
-                            <button type="button" class="toggle yr2p left" id="yr2pleft" data-counter="setYR2Left">YR 2P</button>
+                            <button type="button" class="toggle yellow left" id="yellowleft" data-counter="toggleYLeft">Yellow</button>
+                            <button type="button" class="toggle yr1p left" id="yr1pleft" data-counter="toggleYR1PLeft">YR 1P</button>
+                            <button type="button" class="toggle yr2p left" id="yr2pleft" data-counter="toggleYR2PLeft">YR 2P</button>
                         </td>
                         <!-- <td class="cards center"> </td> -->
                             
                         <td class="cards right" colspan="2">
-                            <button type="button" class="toggle yellow right" id="yellowright" data-counter="setYRight">Yellow</button>
-                            <button type="button" class="toggle yr1p right" id="yr1pright" data-counter="setYR1Right">YR 1P</button>
-                            <button type="button" class="toggle yr2p right" id="yr2pright" data-counter="setYR2Right">YR 2P</button>
+                            <button type="button" class="toggle yellow right" id="yellowright" data-counter="toggleYRight">Yellow</button>
+                            <button type="button" class="toggle yr1p right" id="yr1pright" data-counter="toggleYR1PRight">YR 1P</button>
+                            <button type="button" class="toggle yr2p right" id="yr2pright" data-counter="toggleYR2PRight">YR 2P</button>
                     </tr>
                     <tr class="spacer"><td colspan="5"><br></td></tr>
                     <tr class="game" id="game1">
