Rework counter and monitor + tests
git-svn-id: https://localhost/svn/CounterManager/trunk@7148 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/monitor/monitor.html
+++ b/src/countermanager/http/monitor/monitor.html
@@ -32,7 +32,7 @@ Saetze entsprechend dem Sieger darstellen?
         
         <script type="text/javascript" src="../scripts/jquery.js"></script>
         <script type="text/javascript" src="../scripts/common.js"></script>
-        <script type="text/javascript" src="monitor.js"></script>
+        <script type="module" src="monitor.js"></script>
                 
         <!-- IE 7 and below don't know about JSON, so do it in JS code -->
         <!--[if lt IE 8]>
