--- a/test/countermanager/http/scripts/CommonJsTest.html
+++ b/test/countermanager/http/scripts/CommonJsTest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="common.js" type="text/javascript"></script>
+        <script src="common.js"></script>
     </head>
     <body>
     </body>
