--- a/src/countermanager/http/ceremony/ceremony.html
+++ b/src/countermanager/http/ceremony/ceremony.html
@@ -18,10 +18,11 @@
         <!-- END CSS -->
 
         <!-- BEGIN JS -->
-        <script type="text/javascript" src="../scripts/jquery.js"></script>
-        <script type="text/javascript" src="./js/three.min.js"></script>
-        <script type="text/javascript" src="../scripts/common.js"></script>
-        <script type="text/javascript" src="./js/app.js"></script>
+        <script src="../scripts/jquery.js"></script>
+        <script src="./js/three.min.js"></script>
+        <script src="../scripts/common.js"></script>
+        <script src="../scripts/xmlrpcclient.js"></script>
+        <script src="./js/app.js"></script>
         <!-- END JS -->
         
         <!-- Load specific css file -->
