Add photo with clouds on blue sky from Pixabay
git-svn-id: https://localhost/svn/CounterManager/trunk@7552 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/3rdparty.html
+++ b/3rdparty.html
@@ -63,6 +63,11 @@
                     <td><a href="https://github.com/shinyhut/vernacular-vnc" target="_blank">https://github.com/shinyhut/vernacular-vnc</a></td>
                     <td><a href="https://github.com/shinyhut/vernacular-vnc/blob/master/LICENSE" target="_blank">MIT</a></td>
                 </tr>
+                <tr>
+                    <td>Blue Sky image (ceremony/img/blue-sky.jpg)</td>
+                    <td><a href="https://pixabay.com/photos/blue-clouds-sky-background-white-69383/" target="_blank">Blue Clouds Sky</a></td>
+                    <td><a href="https://pixabay.com/service/license/" target="_blank">Simplified Pixabay Licence</a></td>
+                </tr>
             </tbody>
         </table>
     </body>
