--- a/src/countermanager/http/counter/counter.html
+++ b/src/countermanager/http/counter/counter.html
@@ -211,6 +211,9 @@ Problem:
             <div id="status" class="status">
 
             </div>
+            <div id="strokes" class="strokes">
+                
+            </div>
         </div>
         
         <!-- The lock screen. Tap or click 5 times to force unlock -->
