Fix layout in counter
git-svn-id: https://localhost/svn/CounterManager/trunk@8467 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/counter/counter.html
+++ b/src/countermanager/http/counter/counter.html
@@ -66,7 +66,7 @@
                             <button type="button" class="toggle wo left" id="woleft" data-counter="setWOLeft">Lost w/o</button>
                             <!-- <button type="button" class="toggle injured left" id="injuredleft" data-counter="setInjuredLeft">Injured</button> -->
                         </td>
-                        <td rowspan="2" class="center">&nbsp;<button type="button" id="swap" data-counter="swapSides">&lt;-&gt;</button>&nbsp;</td>
+                        <td rowspan="3" class="center">&nbsp;<button type="button" id="swap" data-counter="swapSides">&lt;-&gt;</button>&nbsp;</td>
                         <td class="flags right" colspan="2">
                             <!-- <button type="button" class="toggle injured right" id="injuredright" data-counter="setInjuredRight">Injured</button> -->
                             <button type="button" class="toggle wo right" id="woright" data-counter="setWORight">Lost w/o</button>
@@ -74,6 +74,8 @@
                             <button type="button" class="toggle service right" id="serviceright" data-counter="toggleServiceRight">Service</button>
                         </td>
                     </tr>
+
+                    <tr class="spacer"><td colspan="5"><br></td></tr>
                     
 <!-- TODO: Yellow / Red cards. 
 Problem: 
