Refresh with force reload
git-svn-id: https://localhost/svn/CounterManager/trunk@9008 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/counter/counter.html
+++ b/src/countermanager/http/counter/counter.html
@@ -207,7 +207,7 @@ Problem:
                 </div>
                 <div id="right">
                     <button id="setAlert" onclick="setAlert();">Help</button>
-                    <button id="reload" onclick="window.location.reload();">&nbsp;&#8635;&nbsp;</button>
+                    <button id="reload" onclick="window.location.reload(true);">&nbsp;&#8635;&nbsp;</button>
                 </div>
             </div>
             <div id="status" class="status">
