Option to show current (server) time in current_matches
git-svn-id: https://localhost/svn/CounterManager/trunk@9215 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/display/current_matches_multiline.html
+++ b/src/countermanager/http/display/current_matches_multiline.html
@@ -31,5 +31,8 @@
                 <tbody></tbody>
             </table>
         </div>
+        <div class="clock" id="clock">
+            
+        </div>
     </body>
 </html>
