Some rework to show current time in current matches
git-svn-id: https://localhost/svn/CounterManager/trunk@9216 7754d8ab-9b54-e011-a251-0001c006bdc7

--- a/src/countermanager/http/display/current_matches_multiline.html
+++ b/src/countermanager/http/display/current_matches_multiline.html
@@ -32,7 +32,11 @@
             </table>
         </div>
         <div class="clock" id="clock">
-            
+            <span id="hour"></span>
+            <span id="sephm"></span>
+            <span id="min"></span>
+            <span id="sepms"></span>
+            <span id="sec"></span>            
         </div>
     </body>
 </html>
